# app/Models/Lotacao.php
@@ -67,7 +67,7 @@ class Lotacao extends Model
 
     public function pessoa()
     {
-        return $this->belongsTo(Pessoas::class, 'pes_id', 'pes_id');
+        return $this->belongsTo(Pessoa::class, 'pes_id', 'pes_id');
     }
 
     public function unidade()
