# app/Models/ServidorTemporario.php
@@ -15,7 +15,7 @@ class ServidorTemporario extends Model
 
     public function pessoa()
     {
-        return $this->belongsTo(Pessoas::class, 'pes_id');
+        return $this->belongsTo(Pessoa::class, 'pes_id');
     }
 
     public function lotacoes()
